2003-08-14  Lluis Sanchez Gual <lluis@ximian.com>

	* ClientSponsor.cs: Implemented.

2003-03-03  Lluis Sanchez Gual <lluis@ideary.com>

	* LeaseManager.cs: Added method for removing an object from the lease manager.
	* LifetimeServices.cs: Added method for removing an object from the lease manager.

2003-02-16  Lluis Sanchez Gual <lluis@ideary.com>

	* LeaseSink.cs: small correction.

2003-02-04  Lluis Sanchez Gual <lluis@ideary.com>

	* LifetimeServices.cs: Implemented all methods.
	* LeaseSink.cs: implemented renewal of lease.
	* Lease.cs: Added. It is an implementation of ILease.
	* LeaseManager.cs: Added. Tracks lifetime of remote objects.

2003-01-29  Lluis Sanchez Gual <lluis@ideary.com>

	* LifetimeServices.cs: Implemented some basic properties.

2002-12-20  Lluis Sanchez Gual <lsg@ctv.es>

	* LeaseSink.cs: Added

2002-08-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* LifetimeServices.cs: the class is sealed.

2002-07-30  Duncan Mak  <duncan@ximian.com>

	* LeaseState.cs: Fixed namespace.

2002-07-29  Duncan Mak  <duncan@ximian.com>

	* ILease.cs: Add the method part of the interface and renamed the
	CurrentState property to it proper name.

2002-07-24  Duncan Mak  <duncan@ximian.com>

	* LeaseState.cs: Moved here from System.Runtime.Remoting.

	* ClientSponsor.cs: 
	* LifetimeServices.cs: Stubbed out

	* ILease.cs: 
	* ISponsor.cs: Added to CVS.
	
