@@ -1,3 +1,8 @@
+2003-10-08  Lluis Sanchez Gual <lluis@ximian.com>
+
+	* ClientSponsor.cs: Improved implementation. Use Hashtable instead of
+	  ArrayList for internal storage.
+
 2003-08-14  Lluis Sanchez Gual <lluis@ximian.com>
 
 	* ClientSponsor.cs: Implemented.
@@ -48,5 +53,3 @@
 
 	* ILease.cs: 
 	* ISponsor.cs: Added to CVS.
-	
-
